(Format: Year/Month/Day)
Changes for 0.9.7:
*03/12/22:
  * Added Lock Screen to fluxbox-generate_menu (Thanks Han)
*03/12/21:
  * Fix rounding on Iconbar (Simon)
    Container.cc
  * And another attempt at sloppy focus issues (Simon)
    WinClient.cc Window.cc fluxbox.cc
  * Minor fix   (Henrik)
    We must assume Passive when no input hint is set
    WinClient.cc
*03/12/20:
  * Fixed toolbar and slit autohide bug (Henrik)
    Toolbar.cc, Slit.cc
  * Added new action: BindKey <key line>  (Henrik)
    This will allow you to add key bindings while you're running fluxbox
    in the Fluxbox Command dialog.
    example:
    BindKey Mod1 R :RootMenu
    The key will add itself to the keys file, to remove keys you still
    have to manualy edit the keys file until there's a better save
    in the code.
    FbCommandFactory.cc, FbCommands.hh/cc, Keys.hh/cc
*03/12/19:
  * Added Edit Clock Format menu item  (Henrik)
    This allow the user to edit the clock format without open 
    and edit the init file manualy
    ClockTool.cc
  * Added new commands:                      (Henrik)
    SetResourceValueCmd <resourcename> <resource value>
    SetResourceValueDialog
    These will help the user to set some resources that doesn't have
    a configure menu item or that's painfull to change in small steps
    (like Menu Alpha)
    FbCommands.hh/cc, FbCommandFactory.cc
  * Added setResourceValue, resourceValue and findResource to ResourceManager (Henrik)
    Resource.hh/cc
  * Removed flicker in iconbar while changing active client  (Henrik)
    in Window.
    IconbarTool.hh/cc
  * Fixed bug in key/mouse screen updates in fluxbox.cc (Henrik)
  * Old/New action: 
    SetWorkspaceName doesn't pop up dialog to edit workspace name  (Henrik)
    it now sets the current workspace name direct 
    example: SetWorkspaceName somespace
    this will set current workspace name to somespace
    The new action for editing workspace name is:
    WorkspaceNameDialog